feat: 添加登录和 json-server 中间件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "suppressImplicitAnyIndexErrors":true // 临时添加用来解决 object[key] 报错问题
   },
   "include": [
     "src"
