--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,5 +48,8 @@
     "eslint-config-prettier": "^8.5.0",
     "json-server": "^0.17.0",
     "prettier": "2.7.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
